@@ -1,5 +1,8 @@
 # Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.502 2006/01/10 19:32:47 wolf31o2 Exp $
+# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.503 2006/01/11 23:27:52 wolf31o2 Exp $
+
+  11 Jan 2006; Chris Gianelloni <wolf31o2@gentoo.org> AUTHORS, arch/ppc.py:
+  Added ppc -mcpu patch from Pylon for bug #118709.
 
   10 Jan 2006; Chris Gianelloni <wolf31o2@gentoo.org>
   modules/embedded_target.py, modules/stage4_target.py:
